src/snapshots/kk__tests__compiler__typecheck__case_exhaustiveness_array_2.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let bar =
  \[] => true
  \[true, ..._] => false
  \[false, ..._] => false
  \_ => false

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_array_2.kk:5:4
  │
5 │   \_ => false
  │    ^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
