src/snapshots/kk__tests__compiler__typecheck__monadic_let_enum_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Color = #red #green
enum Boolean = #true #false
let firstIsTrue = \x =>
  let #red = x
  #true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_enum_1.kk:5:3
  │
5 │   #true
  │   ^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Color       | + Boolean   |
    +---------------+-------------+
